fix: cards spacing on homepage and game list page

--- a/public/gamelist.css
+++ b/public/gamelist.css
@@ -9,7 +9,7 @@ h1 {
   margin: 0;
 }
 
-ul {
+.games {
   list-style: none;
   padding: 0;
 
