--- a/public/homepage.css
+++ b/public/homepage.css
@@ -9,7 +9,11 @@ h1 {
   margin: 0;
 }
 
-ul {
+.games {
   list-style: none;
   padding: 0;
+
+  > li:not(:first-child) {
+    margin-top: 1rem;
+  }
 }
